--- a/css/base.css
+++ b/css/base.css
@@ -1,11 +1,13 @@
-#gamearea
+div.gameArea
 {
-  width: 640px;
-  height: 480px;
+	width:900px;
+	margin-left:auto;
+	margin-right:auto;
 }
 
 canvas
 {
+  width: 100%;
+  height: 100%;
   border: 1px solid black;
 }
-
