--- a/css/base.css
+++ b/css/base.css
@@ -13,3 +13,12 @@ canvas
    	 margin-right: auto;
     	display: block;
 }
+
+Logo
+{
+	padding-left: 0;
+    	padding-right: 0;
+   	 margin-left: auto;
+   	 margin-right: auto;
+    	display: block;
+}
