--- a/css/base.css
+++ b/css/base.css
@@ -14,3 +14,11 @@ canvas
    	 margin-right: auto;
     	display: block;
 }
+
+body
+{ 
+background-image:url('img/background.png');
+background-repeat:no-repeat;
+background-attachment:fixed;
+background-position:center; 
+}
