--- a/css/base.css
+++ b/css/base.css
@@ -18,7 +18,7 @@ canvas
 body
 { 
 background-image:url('img/background.png');
-background-repeat:no-repeat;
+background-repeat:repeat;
 background-attachment:fixed;
 background-position:center; 
 }
