--- a/css/base.css
+++ b/css/base.css
@@ -15,10 +15,12 @@ canvas
 	position:relative;
 	border: 1px solid black;
 	padding-left: 0;
-  padding-right: 0;
-  margin-left: auto;
-  margin-right: auto;
-  display: block;
+	  padding-right: 0;
+ 	 margin-left: auto;
+ 	 margin-right: auto;
+ 	 display: block;
+	pointer-events: none;
+
 }
 
 body
