changed back disable

--- a/css/base.css
+++ b/css/base.css
@@ -18,8 +18,7 @@ canvas
 	  padding-right: 0;
  	 margin-left: auto;
  	 margin-right: auto;
- 	 display: block;
-	pointer-events: none;
+ 	 display: blockl;
 
 }
 
