Made the about page look nicer
moved the whole page down by 35 pixels so that it looks slightly better.

--- a/css/about.css
+++ b/css/about.css
@@ -12,6 +12,7 @@ strong {
     margin-left: auto;
     margin-right: auto; 
     margin-bottom: 20px;
+    margin-top: 35px;
     width: 1000px;
     list-style-type: none;
     line-height: 1em;
