--- a/css/base.css
+++ b/css/base.css
@@ -1,7 +1,7 @@
 #logo
 {
   margin: auto;
-  display: block;
+  display:inline;
 }
 
 div.gameArea
@@ -15,15 +15,25 @@ div.gameArea
 	width:896px;
 }
 
-canvas
+div#logodiv
 {
-	position:relative;
+	width:896px;
+}
+
+div#minimap
+{
+	display:inline-block;
+}
+
+canvas#gameArea
+{
+	position:absolute;
 	border: 1px solid black;
 	padding-left: 0;
-	  padding-right: 0;
- 	 margin-left: auto;
- 	 margin-right: auto;
- 	 display: block;
+	padding-right: 0;
+	 margin-left: auto;
+	 margin-right: auto;
+	 display: block;
 
 }
 
