--- a/css/base.css
+++ b/css/base.css
@@ -13,7 +13,7 @@ div.gameArea
 	color:black;
 	font-weight:bold;
 	width:896px;
-	 display: relative;
+	display: relative;
 }
 
 div#logodiv
@@ -26,15 +26,15 @@ div#minimap
 	display:inline-block;
 }
 
-canvas#gameArea
+canvas#gameCanvas
 {
 	position:absolute;
 	border: 1px solid black;
 	padding-left: 0;
 	padding-right: 0;
-	 margin-left: auto;
-	 margin-right: auto;
-	 display: relative;
+	margin-left: auto;
+	margin-right: auto;
+	display: relative;
 
 }
 
