--- a/css/about.css
+++ b/css/about.css
@@ -1,13 +1,16 @@
 body {
-    background-color: #f00; 
+    background-color: #ffffff; 
+  background-image: url('../img/background.png');
+  background-repeat: repeat;
+  background-attachment: fixed;
+  background-position: center;
 }
 strong {
     line-height: 15px;
     text-align: center;
 }
 #page {
-    font-size: 1.45em;
-    p.sansserif{font-family:Arial,Helvetica,sans-serif;};
+    font-size: 1.20em;
 }
 #description {
     margin-left: auto;
@@ -34,4 +37,7 @@ strong {
     height: 100%;
     background-color: #FFFFFF;
     padding-left: 14px;
+}
+p.center { 
+text-align: center; 
 }
