--- a/css/about.css
+++ b/css/about.css
@@ -1,6 +1,6 @@
 body {
     background-color: #ffffff; 
-  background-image: url('../img/background.png');
+  background-image: url('../img/Crystal Clouds.png');
   background-repeat: repeat;
   background-attachment: fixed;
   background-position: center;
